# mypka

./: .gitignore  ADAPTER-PROMPT.md  AGENTS.md  AGENTS.md.codex  BOOTSTRAP.md  CHANGELOG-MIGRATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE-MAP.md  NOTICE.md  README.md  WAY-FORWARD.md  manifest.json  validation-script.sh
.claude/agents/: charta.md  felix.md  iris.md  mack.md  nolan.md  pax.md  penn.md  pixel.md  silas.md  vera.md  vex.md
.claude/commands/: hey-larry.md  update-scaffold.md
.codex/agents/: charta.toml  felix.toml  iris.toml  mack.toml  nolan.toml  pax.toml  penn.toml  pixel.toml  silas.toml  vera.toml  vex.toml
Deliverables/: 2026-07-09-tutair-product-roadmap.md  README.md
Deliverables/2026-07-07-tubeair-wp0/: .gitignore  README.md  pyproject.toml
Deliverables/2026-07-07-tubeair-wp0/src/tubeair/: __init__.py  ai.py  audio_fallback.py  bot.py  cli.py  clipboard_capture.py  intake.py  markdown.py  models.py  processor.py  telegram_bot.py  transcript.py  youtube.py
Deliverables/2026-07-07-tubeair-wp0/tests/: test_ai.py  test_bot.py  test_cli.py  test_clipboard_capture.py  test_intake_markdown.py  test_markdown.py  test_processor.py  test_text_processor.py  test_transcript_selection.py  test_youtube.py
Expansions/: .trusted-sources  INDEX.md  README.md
PKM/: INDEX.md
Team/: agent-index.md
Team Knowledge/: INDEX.md
docs/: context.md  exam-board-map.md  revision-framework.md  session-log.md  student-guide.md
github/: README.md
scripts/: build-scaffold-release.sh  check-version.py  update-scaffold.py
(+441 files in other folders)
